<resources>
    <string name="app_name">Github Users Search</string>
    <string name="my_name">Muhamad Zulfikar Fikri</string>
    <string name="my_email">a152bsy2146@bangkit.academy</string>
    <string name="menu_1">Favorite</string>
    <string name="menu_2">Setting</string>
    <string name="dark">Dark Mode</string>

    <string name="home_fragment">Hello home fragment</string>
    <string name="detail_fragment">Hello detail fragment</string>
    <string name="detail_title">Detail User</string>
    <string name="switch_title">Setting</string>

    <string name="username">template username</string>
    <string name="name">template name</string>
    <string name="following">100 following</string>
    <string name="follower">100 follower</string>
    <string name="searchbar_hint">Masukkan username</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_title">Favorite User</string>
</resources>